version 1.1

* made friends/places toggles global
* saving lat/long for photo
* added stats call for check-ins
* when you click "I'm Here" from a profile page, it checks the user in with Ping on
* widened minute/hour/day label on Friends List page so that 3 digit numbers fit in
* fixed bug where user icons weren't appearing in the 'People Here' section of the Venue page
* fixed bug where a non-US region would screw up the date calculations