@@ -7,3 +7,4 @@ version 1.1
 * widened minute/hour/day label on Friends List page so that 3 digit numbers fit in
 * fixed bug where user icons weren't appearing in the 'People Here' section of the Venue page
 * fixed bug where a non-US region would screw up the date calculations
+* fading out user icons on Friends Map (from 100% to 25% opacity over 24 hours)
